# mafia-sdk

./: .gitignore  CHANGES  CMakeLists.txt  Library.cpp  MafiaSDK.vcxproj  Main.cpp  README.md
MafiaSDK/: Helpers.hpp  MafiaSDK.VC.VC.opendb  MafiaSDK.h  MafiaSDK.sln
MafiaSDK/Debug/: MafiaSDK.ilk
MafiaSDK/Engine/: I3D_Frame.hpp  I3D_Light.hpp  I3D_Projector.hpp  ITexture.hpp
MafiaSDK/Game/: C_Actor.hpp  C_Blood.hpp  C_BloodManager.hpp  C_Game.hpp  C_Human.hpp  C_Indicators.hpp  C_Mission.hpp  C_Player.hpp
MafiaSDK/MafiaSDK/: MafiaSDK.vcxproj  MafiaSDK.vcxproj.filters
MafiaSDK/MafiaSDK/Debug/: vc140.idb  vc141.idb
MafiaSDK/MafiaSDK/Debug/MafiaSDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MafiaSDK.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MafiaSDK/MafiaSDK/MafiaSDK/Game/: C_Actor.hpp  C_Entity.hpp  C_Mission.hpp  C_Player.hpp
MafiaSDK/Utils/: Helpers.hpp
